220106
# 문자열 덧셈 및 뺄셈
>>> a=3
>>> b=7
>>> a+b
10
>>> a-b
-4

# 문자열 곱셈 및 나눗셈
>>> a=8e
  File "<stdin>", line 1
    a=8e
      ^
SyntaxError: invalid decimal literal
  # 8과 e 사이에 * 넣기
>>> a=8
>>> b=9
>>> a*b
72
>>> a/b
0.8888888888888888

# 문자열 거듭제곱
>>> 3**4
81

# 문자열 나눗셈의 몫과 나눗셈
>>> 6%4
2
>>> 6//4
1

# 따옴표가 들어간 문장에 대한 문자열
>>> a='I love you!'
>>> print(a)
I love you!
>>>
>>> a="May's house"
>>> print(a)
May's house
>>> a='"I love you!"'
>>> print(a)
"I love you!"
>>> a="\"I love May\'s house!\""
>>> print(a)
"I love May's house!"

# 줄바꿈이 되어 있는 문장에 대한 문자열
>>> a="I love you.\nI love you, too."
>>> print(a)
I love you.
I love you, too.
>>>
>>> a='''
... I love you
... I love you, too
... '''
>>> print(a)

I love you
I love you, too

>>> a="""
... I hate you.
... I hate you, too.
... """
>>> print(a)

I hate you.
I hate you, too.

>>>
>>> a="one\ntwo\nthree\nfour"
>>> print(a)
one
two
three
four
  #시리얼 통신에서 가끔 \n을 사용하면 계단식으로 나뉘는 경우 있음. 그럴 때는 \r로 보정

# 문자열의 덧셈과 곱셈
>>> a="I love"
>>> b=" you!"
>>> a+b
'I love you!'
>>> a="love"
>>> a*10
'lovelovelovelovelovelovelovelovelovelove'

# 글자 수 세기
>>> a="I love you. I love you, too!"
>>> len(a)
28

# 문자열 인덱싱
>>> a="I love you!"
>>> a[4]
'v'
>>> a[-6]
'e'
  #파이썬은 0부터 센다.

# 문자열 스플라이싱
>>> a="I love you!"
>>> Subject=[:1]
  File "<stdin>", line 1
    Subject=[:1]
             ^
SyntaxError: invalid syntax
  # 대괄호 앞에 a 빼먹지 마세요..
>>> Subject=a[:1]
>>> Verb=[2:6]
  File "<stdin>", line 1
    Verb=[2:6]
           ^
SyntaxError: invalid syntax
>>> Verb=a[2:6]
>>> Object=a[7:]
>>> Subject
'I'
>>> Verb
'love'
>>> Subject
'I'
>>> Object
'you!'
>>> a="202114526May"
>>> classnumber=a[:9]
>>> name=[:9]
  File "<stdin>", line 1
    name=[:9]
          ^
SyntaxError: invalid syntax
>>> name=a[:9]
>>> classnumber
'202114526'
>>> name
'202114526'
>>> name=a[9:]
>>> name
'May'
>>>
>>> class of=a[:4]
  File "<stdin>", line 1
    class of=a[:4]
            ^
SyntaxError: expected ':'
>>> classof=a[:4]
>>> classnumber=[4:9]
  File "<stdin>", line 1
    classnumber=[4:9]
                  ^
SyntaxError: invalid syntax
>>> classnumber=a[4:9]
>>> name=a[9:]
>>> classof
'2021'
>>> classnumber
'14526'
>>> name
'May'
